CSS fix to wrapped checkbox name.

--- a/public/css/_chkbox.scss
+++ b/public/css/_chkbox.scss
@@ -3,7 +3,7 @@
     position: relative;
     cursor: pointer;
     display: block;
-    width: 90%;
+    /*width: 90%;*/
     input[type=checkbox] {
         position: absolute;
         opacity: 0;
